Fix unpredictable and uneven behavior in togglable elements of the header

--- a/src/scss/06_components/block/_header-language-links.scss
+++ b/src/scss/06_components/block/_header-language-links.scss
@@ -13,7 +13,7 @@ $-otherlangs-min-width: 240px; // From design specs
 }
 
 .headerlanguagelinks__menu-dropdown {
-  background-color: $color-silver-medium-light;
+  background-color: $color-black-5;
   height: auto; // Can not be 100% or the background will stop early on landscape mobile screens.
   list-style: none;
   margin: 0;
